--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,18 +1,15 @@
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   padding: 0.5rem;
-  top: 0;
   z-index: 999;
+  top: 0;
   background-color: #1E1B1E;
-  border-radius: 0.5rem;
-  margin-left: 30%;
-  margin-right: 30%;
-  margin-top: 0.5rem;
-  width: auto;
+  left: 0;
+  right: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 .main{
@@ -44,6 +41,18 @@
 
 .section {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.section-projects {
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
