--- a/src/styles/btns.css
+++ b/src/styles/btns.css
@@ -12,15 +12,19 @@ button{
     color: #FEFEFE;
     border-radius: 0.5rem;
     border: 2px solid #8325FD;
+    font-size: 1rem;
+    transition: 0.5s;
 }
 
 .header-btn{
     margin: 0.5rem 1rem;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     border-radius: 0.5rem;
     border: none;
     background-color: transparent;
     color: #FEFEFE;
+    font-size: 1rem;
+    transition: 0.5s;
 }
 
 .big-btns{
@@ -34,6 +38,7 @@ button{
     align-items: center;
     margin: 1rem 0 1rem 0;
     font-size: 1rem;
+    transition: 0.5s;
 }
 
 .big-btns:hover{
@@ -65,6 +70,7 @@ button{
     background-position: center;
     border: none;
     background-color: #FEFEFE;
+    transition: 0.5s;
 }
 
 .hvr-grow-shadow {
@@ -94,6 +100,7 @@ button{
     background-position: center;
     border: none;
     margin-right: 0.5rem;
+    transition: 0.5s;
 }
 
 .github-btn-rrss{
@@ -107,6 +114,7 @@ button{
     border: none;
     margin-right: 1rem;
     padding: 1rem;
+    transition: 0.5s;
 }
 
 .github-btn-rrss:hover{
@@ -126,6 +134,7 @@ button{
     background-position: center;
     border: none;
     padding: 1rem;
+    transition: 0.5s;
 }
 
 .linkedin-btn:hover{
