--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -47,8 +47,8 @@
   align-items: start;
   padding-left: 5rem;
   padding-right: 5rem;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 10rem;
+  margin-left: 10rem;
 }
 
 .section-projects {
@@ -68,6 +68,7 @@
   display: flex;
   width: 100%;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
