--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -1,11 +1,107 @@
+.nav{
+    display: none;
+}
+.nav-active{
+    display: none;
+}
+
+.display-btn{
+    background-image: url("https://cdn-icons-png.flaticon.com/128/2767/2767162.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    border: none;
+}
+
 @media (max-width: 1200px) {
     .projects{
         display: flex;
         flex-direction: column;
+        height: auto;
+        margin-bottom: 2rem;
+    }
+}
+
+@media (max-width: 700px) {
+    .header{
+        display: none;
+    }
+    :root{
+        margin-top: 10rem;
+    }
+    .nav-active{
+        background-color: #1e1f26ff;
+        padding: 1.5rem;
+        margin-left: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        gap: 2rem;
+        width: 70%;
+        z-index: 999;
+        text-align: justify;
+    }
+    .nav{
+        background-color: #1e1f26ff;
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 999;
+    }
+    .bar-btn{
+        display: none;
+    }
+    .bar-btn-active{
+        margin: 0.5rem 1rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: transparent;
+    color: #FEFEFE;
+    font-size: 1rem;
+    transition: 0.5s;
+    }
+    .bar-btn-hover:hover{
+        background-color: #1e1f26ff;
+    }
+}
+
+@media (max-width: 620px) {
+    :root{
+        margin-top: 15rem;
     }
 }
 
 @media (max-width: 480px) {
+    :root{
+        margin-top: 5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: auto;
+    }
+    .main{
+        margin: 0;
+    }
+    .about-box{
+        margin: 0;
+        margin-top: 1.5rem;
+    }
     body{
         display: flex;
         justify-content: center;
@@ -15,18 +111,7 @@
         width: 80%;
         height: auto;
     }
-    .main{
-        margin: 0;
-    }
-    .header{
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 1rem;
-    }
     .section{
-        margin: 0;
         justify-content: center;
         display: flex;
         align-items: center;
@@ -36,26 +121,33 @@
     .section-home{
         height: auto;
     }
-    .parrafo{
-        padding: 0 2rem 0 2rem;
-    }
     .row{
         display: flex;
         flex-direction: column;
     }
-    .project-card-idle {
+    .project-card {
         display: flex;
         align-items: center;
         justify-content: center;
         margin: 2rem;
-        width: 80%
+        width: 80%;
+        margin-left: 1rem;
     }
-    .project-card-timer{
+    .title{
+        margin: auto;
+        margin-top: 2rem;
+    }
+    .parrafo{
+        margin: 2rem;
+    }
+    .section-projects{
+        justify-content: center;
         display: flex;
         align-items: center;
-        justify-content: center;
-        margin: 2rem;
-        width: 80%
+        height: auto;
+        padding: 0;
+        width: 80%;
+        margin-right: 1rem;
     }
     ul{
         padding: 1rem 2rem 1rem 2rem;
@@ -63,6 +155,6 @@
     }
     textarea.input.textarea {
         margin: 1rem 2rem 1rem 2rem;
-        width: 70%;
+        width: 50%;
     }
 }
