--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -24,11 +24,18 @@
         height: auto;
         margin-bottom: 2rem;
     }
+    .section{
+        height: auto;
+    }
 }
 
 @media (max-width: 700px) {
     .header{
         display: none;
+    }
+    .main{
+        margin: 0;
+        width: 100%;
     }
     :root{
         margin-top: 10rem;
@@ -36,11 +43,10 @@
     .nav-active{
         background-color: #1e1f26ff;
         padding: 1.5rem;
-        margin-left: 2rem;
         display: flex;
         flex-direction: column;
         justify-content: start;
-        align-items: center;
+        align-items: start;
         position: fixed;
         top: 0;
         bottom: 0;
@@ -51,7 +57,8 @@
     }
     .nav{
         background-color: #1e1f26ff;
-        padding: 1.5rem;
+        padding-bottom: 1rem;
+        padding-top: 1rem;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -61,12 +68,12 @@
         left: 0;
         right: 0;
         z-index: 999;
+        width: 100%;
     }
     .bar-btn{
         display: none;
     }
     .bar-btn-active{
-        margin: 0.5rem 1rem;
     padding: 1rem;
     border-radius: 0.5rem;
     border: none;
@@ -78,48 +85,20 @@
     .bar-btn-hover:hover{
         background-color: #1e1f26ff;
     }
-}
-
-@media (max-width: 620px) {
-    :root{
-        margin-top: 15rem;
-    }
-}
-
-@media (max-width: 480px) {
-    :root{
-        margin-top: 5rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: auto;
-    }
-    .main{
-        margin: 0;
-    }
-    .about-box{
-        margin: 0;
-        margin-top: 1.5rem;
-    }
-    body{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 2rem;
-        padding: 1rem;
-        width: 80%;
-        height: auto;
-    }
     .section{
         justify-content: center;
         display: flex;
         align-items: center;
         height: auto;
         padding: 0;
+        margin: 0;
     }
     .section-home{
+        justify-content: center;
+        display: flex;
+        align-items: center;
         height: auto;
+        padding: 0;
     }
     .row{
         display: flex;
@@ -129,9 +108,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 2rem;
-        width: 80%;
-        margin-left: 1rem;
+        width: 100%;
     }
     .title{
         margin: auto;
@@ -146,8 +123,89 @@
         align-items: center;
         height: auto;
         padding: 0;
-        width: 80%;
-        margin-right: 1rem;
+        margin: 0;
+    }
+}
+
+@media (max-width: 620px) {
+    :root{
+        margin-top: 15rem;
+    }
+}
+
+@media (max-width: 480px) {
+    :root{
+        margin-top: 6rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .about-box{
+        margin: 0;
+        margin-top: 1.5rem;
+        width: 90%;
+    }
+    body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        text-align: justify;
+        margin: 0;
+    }
+    .section{
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        height: auto;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+    .section-home{
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        height: auto;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+    }
+    .project-card {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+    .title{
+        margin: auto;
+        margin-top: 2rem;
+    }
+    .parrafo{
+        margin: 2rem;
+    }
+    .section-projects{
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        height: auto;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+    .footer{
+        width: 100%;
+        padding: 0;
+        margin-bottom: 1.5rem;
+        margin-top: 3rem;
     }
     ul{
         padding: 1rem 2rem 1rem 2rem;
