--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -26,10 +26,21 @@
     }
     .section{
         height: auto;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media (max-width: 1200px) {
+    .about-box{
+        width: 50%;
     }
 }
 
 @media (max-width: 700px) {
+    .about-box{
+        width: 70%;
+    }
     .header{
         display: none;
     }
