--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -234,7 +234,7 @@ li{
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/timer.png");
+  background-image: url("../img/timer-video.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -254,7 +254,7 @@ li{
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/idle.png");
+  background-image: url("../img/miaudle-video.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
